# sg_bot

./: .env.example  main.py  pyproject.toml
config/: config.py
database/: base.py  database.py  models.py  repository.py  schemas.py
filters/: filters.py
handlers/: admin_handlers.py  broadcast_handlers.py  crypto_handlers.py  other_handlers.py  user_handlers.py
keyboards/: crypto_btn.py  exchange_btn.py  image_consent_btn.py  main_menu.py
lexicon/: lexicon.py
migrations/: env.py
migrations/versions/: e238b35d5a5d_init.py
services/: services.py
utils/: number.py
